<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.menu.GarbageCollectionService">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="44dp"
            android:text="@string/garbage_collection_request"
            app:layout_constraintEnd_toEndOf="@+id/textDateTime"
            app:layout_constraintStart_toStartOf="@+id/textDateTime"
            app:layout_constraintTop_toBottomOf="@+id/textDateTime" />

        <TextView
            android:id="@+id/textName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="168dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textName2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/textName1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textName1"
            app:layout_constraintTop_toBottomOf="@+id/textName1" />

        <TextView
            android:id="@+id/textPhone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/phone_no"
            app:layout_constraintStart_toStartOf="@+id/textName1"
            app:layout_constraintTop_toBottomOf="@+id/textName1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/textPhone1"
            app:layout_constraintTop_toBottomOf="@+id/textPhone1" />

        <TextView
            android:id="@+id/textAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="@+id/textPhone1"
            app:layout_constraintTop_toBottomOf="@+id/textPhone1" />

        <TextView
            android:id="@+id/textAddress2"
            android:layout_width="278dp"
            android:layout_height="91dp"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/textAddress1"
            app:layout_constraintTop_toBottomOf="@+id/textAddress1" />

        <TextView
            android:id="@+id/textDateTime"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="32dp"
            android:text="@string/click_to_select_service_date_time"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textAddress2"
            app:layout_constraintStart_toStartOf="@+id/textAddress2"
            app:layout_constraintTop_toBottomOf="@+id/textAddress2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>